# yeti

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  build.zig  run_tests.sh  todo.md
.github/workflows/: ci.yml
compiler/: meson.build  watch_and_test.sh
compiler/examples/: anonymous_style.txt  c_style.txt  python_style.txt
compiler/include/: allocator.h  parser.h  stack_allocator.h  (+2 more)
compiler/tests/: meson.build  test_tokenizer.c
compiler/tests/include/: assertions.h  test_suites.h
compiler/tests/src/: assertions.c  test_main.c  test_parser.c  test_string_interner.c  test_tokenizer.c
examples/: clamp.yeti  fib.yeti  fibonnaci.yeti  hello_world.yeti  imports.yeti  list.yeti  list2.yeti  loops.yeti  math.yeti  new_conditional_syntax.yeti  new_for_syntax.yeti  new_function_syntax.yeti  new_import_syntax.yeti  new_struct_syntax.yeti  new_while_syntax.yeti  overloading_on_named_arguments.yeti  pipeline.yeti  pointers.yeti  print.yeti  project_euler_1.yeti  project_euler_2.yeti  return_type_inference.yeti  running_average.yeti  simd.yeti  strings.yeti  structs.yeti  sum.yeti  syntax.yeti  syntax_proposal.yeti  uniform_function_call.yeti  uniform_function_call_syntax.yeti
src/: bucket_list.zig  build_codebase.zig  codebase.zig  codegen.zig  codegen_next.zig  colors.zig  compiler.zig  components.zig  ecs.zig  error_printer.zig  file_system.zig  filesystem.zig  init_codebase.zig  list.zig  lower.zig  main.zig  parser.zig  query.zig  scopes.zig  semantic_analyzer.zig  strings.zig  symbols.zig  test_utils.zig  tokenizer.zig  typeid.zig  wasm_printer.zig  wasm_string.zig
test/: test.zig
(+52 files in other folders)
